fix: trusted issuer config (#5526)
* fix: trusted issuer config

* fix: vault config

* fix: static callback config